[package]
name = "ici_tools"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
description = "ICI tools"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
pixels-graphics-lib = {version="0.15.3", default-features = false, features = ["images"] }
clap = { version = "4.4.12", features = ["derive"] }
color-eyre = "0.6.2"